fixed justified title on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ html {
   font-size: 3rem;
   font-weight: 300;
   color: white;
-  text-justify: auto;
+  text-align: center;
 }
 #home h1 {
   text-align: center;
